# kdewebkit

./: .kde-ci.yml  .reviewboardrc  CMakeLists.txt  KF5WebKitConfig.cmake.in  README.md  metainfo.yaml
cmake/: KDEWebKitInternalMacros.cmake
src/: CMakeLists.txt  kgraphicswebview.cpp  kgraphicswebview.h  kwebpage.cpp  kwebpage.h  kwebpluginfactory.cpp  kwebpluginfactory.h  kwebview.cpp  kwebview.h  kwebview_p.h  kwebwallet.cpp  kwebwallet.h
src/designer/: CMakeLists.txt  kdewebkit.widgets
